--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@node-loader/babel": "2.1.0",
     "@node-loader/core": "2.0.0",
     "@node-loader/import-maps": "1.1.0",
-    "ava": "5.3.1",
+    "ava": "6.1.1",
     "babel-plugin-transform-remove-console": "6.9.4",
     "babel-plugin-unassert": "3.2.0",
     "babel-preset-power-assert": "3.0.0",
@@ -103,7 +103,7 @@
       "--import=data:text/javascript,import {register} from 'node:module'; import {pathToFileURL} from 'node:url'; register('@node-loader/core', pathToFileURL('./'))"
     ],
     "require": [
-      "regenerator-runtime/runtime"
+      "regenerator-runtime/runtime.js"
     ],
     "timeout": "1m"
   },
