--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "pinst": "3.0.0",
     "power-assert": "1.6.1",
     "regenerator-runtime": "0.14.1",
-    "xo": "0.53.1"
+    "xo": "0.56.0"
   },
   "ava": {
     "files": [
@@ -205,6 +205,20 @@
     ],
     "rules": {
       "unicorn/prefer-node-protocol": "off",
+      "import/order": [
+        "error",
+        {
+          "groups": [
+            "builtin",
+            "external",
+            "parent",
+            "sibling",
+            "index"
+          ],
+          "newlines-between": "always",
+          "warnOnUnassignedImports": true
+        }
+      ],
       "unicorn/filename-case": [
         "error",
         {
