--- a/.github/workflows/ci:lint-config.yml
+++ b/.github/workflows/ci:lint-config.yml
@@ -1,7 +1,11 @@
 name: ci:lint-config
+
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      main
+  pull_request:
+
 jobs:
   cover:
     name: Continuous integration (config linting)
