--- a/.github/workflows/ci:lint.yml
+++ b/.github/workflows/ci:lint.yml
@@ -1,7 +1,11 @@
 name: ci:lint
+
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      main
+  pull_request:
+
 jobs:
   cover:
     name: Continuous integration (code linting)
