--- a/package.json
+++ b/package.json
@@ -87,13 +87,13 @@
     "esdoc-standard-plugin": "1.0.0",
     "fixpack": "4.0.0",
     "husky": "9.0.10",
-    "lint-staged": "15.2.1",
+    "lint-staged": "15.2.2",
     "microbundle": "0.15.1",
     "np": "9.2.0",
     "pinst": "3.0.0",
     "power-assert": "1.6.1",
     "regenerator-runtime": "0.14.1",
-    "xo": "0.56.0"
+    "xo": "0.57.0"
   },
   "ava": {
     "files": [
@@ -205,6 +205,7 @@
     ],
     "rules": {
       "unicorn/prefer-node-protocol": "off",
+      "unicorn/prevent-abbreviations": "off",
       "import/order": [
         "error",
         {
